<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/dialog_editTextFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintFirstName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/dialog_editTextLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintLastName"
        android:inputType="textPersonName" />

    <Spinner
        android:id="@+id/dialog_spinnerSchool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/schools" />

    <Button
        android:id="@+id/dialog_btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnUpdate" />

    <Button
        android:id="@+id/dialog_btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDelete" />


</LinearLayout>
